# fastapi_template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  dev_server.py  entrypoint.sh  pyproject.toml
{{cookiecutter.project_name}}/.github/: CODEOWNERS  copilot-instructions.md
{{cookiecutter.project_name}}/.github/workflows/: python-app.yml  semantic-release.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: main.py  settings.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/auth/: dependencies.py  oauth_auth.py  secrets_b64.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/custom_logger/config/: config.json
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/custom_logger/formatters/: json.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/custom_logger/setup/: setup_logger.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/models/: input.py  oauth.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/routers/: math.py  oauth.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/static/: callback.html  index.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/utils/: auth_utils.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/workers/: math_operations.py  oauth_service.py
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/unit/: test_workers.py
